--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <version>2.17</version>
             <type>maven-plugin</type>
         </dependency>
+
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
